fix: update ACL syntax and improve client security configuration
- Fix ACL rules from invalid CIDR format to correct protocol/port syntax
  - Change reject(0.0.0.0/0:22) to reject(all, tcp/22)
  - Change direct(0.0.0.0/0:80) to direct(all, tcp/80)

- Improve client configuration security
  - Use CA certificate verification instead of insecure: true
  - Add transport.udp.hopInterval for proper UDP configuration
  - Remove pinSHA256 (not supported with insecure: false in Hysteria)

- Update deployment scripts
  - install_hysteria_server.sh: Fix ACL and client example
  - generate_client_configs.sh: Copy CA cert and add usage instructions
  - hysteria_config_generator.py: Update to use CA verification

Security: Clients now use CA certificate verification for secure
connections without requiring a domain name.

--- a/.gitignore
+++ b/.gitignore
@@ -470,3 +470,7 @@ $RECYCLE.BIN/
 # End of https://www.toptal.com/developers/gitignore/api/goland+all,intellij+all,go,windows,linux,macos,python,pycharm+all
 
 test-configs/
+
+# Build artifacts
+hysteria
+hysteria_configs/test.*
